--- a/index.html
+++ b/index.html
@@ -431,6 +431,9 @@
             <div class="h2bg">
                 <h2>Contact</h2>
             </div>
+            <p style="font-size: 13px; color: gray; margin-bottom: 20px;">
+                - Email: doratsai@usc.edu
+            </p>
             <div class="contact-icons">
                 <a href="mailto:doratsai@usc.edu" target="_blank" class="icon-link">
                     <img src="mail.png" alt="Email" class="icon">
