--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
 
 
     <main>
-        <!-- <section id="intro" style="padding: 40px 0;">
+        <section style="height:max-content;">
+            <!-- <div class="h2bg">
+                <h2>Introduction</h2>
+            </div> -->
             <div class="introbox">
                 <div class="introtext">
-                    <br><p class="text">Embark on a magical journey in City Witch, a turn-based RPG where 
-                        players guide Remi, a young witch defending her city from disaster monsters. 
-                        Inherited from her retiring grandmother, the duty unfolds through a 
-                        narrative-rich, linear story. Engage in strategic battles with mini-games 
-                        triggering powerful attacks, exploring the origins of monsters and 
-                        reflecting on human distractions. City Witch delivers a captivating blend 
-                        of gameplay and introspective storytelling in a spellbinding urban fantasy.</p>
-                    <br>
+                    <p class="text">
+                    Welcome to my portfolio, a curated showcase of my academic journey as a <b>Computer Science Games</b> major with a minor in
+                    <b>Technical Game Art</b> at the University of Southern California. Proficient in coding, 2D art, 3D modeling (including
+                    texturing and rigging), game design, and narrative, I am dedicated to seamlessly blending technology and artistic
+                    expression. This collection not only highlights my foundational skills in game development but also emphasizes my
+                    expertise in crafting compelling narratives. Explore my work for a comprehensive view of my proficiency in <button class="tag" style="background-color: #a5d19b">Coding</button>,
+                    <button class="tag" style="background-color: #0889c9">2D Art</button>, <button class="tag" style="background-color: #65c2eb">3D Modeling</button>, 
+                    <button class="tag" style="background-color: #94bcd2">Game Design</button>, and <button class="tag" style="background-color: #5b9abc">Narrative</button> design.</p>
                 </div>
             </div>
             <br>
-        </section> -->
-
+        </section>
 
         <section id="project">
             <div class="h2bg">
@@ -64,7 +66,7 @@
                     <hr>
                     <button class="tag" style="background-color: #0b5d85">Lead Artist</button>
                     <button class="tag" style="background-color: #0889c9">2D Art</button>
-                    <button class="tag" style="background-color: #94bcd2">Game Designer</button>
+                    <button class="tag" style="background-color: #94bcd2">Creator</button>
                     <button class="tag" style="background-color: #5b9abc">Narrative</button><br>
                     <br><p>Embark on a magical journey in City Witch, a turn-based RPG where 
                         players guide Remi, a young witch defending her city from disaster monsters. 
@@ -80,7 +82,7 @@
                         <li>Animation, background, UI, etc.</li>
                         <li>Conceptualize narrative and settings</li>
                     </ul><br>
-                    <button class="playgame">Play</button>
+                    <button class="playgame">Details</button>
                 </div>
             </div>
             <div class="gamepro">
@@ -94,7 +96,7 @@
                     <span style="font-weight: 300; font-size: 30px;">Pig & Chicken 2024</span><br>
                     <hr>
                     <button class="tag" style="background-color: #0889c9">Artist</button>
-                    <button class="tag" style="background-color: #65c2eb">3D Model</button>
+                    <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
                     <button class="tag" style="background-color: #80cdf0">3D Animation</button><br>
                     <br><p>In Progress!!!</p>
                     <br>
@@ -114,7 +116,7 @@
                     <span style="font-weight: 300; font-size: 30px;">Brinkmanship 2024</span><br>
                     <hr>
                     <button class="tag" style="background-color: #0889c9">Artist</button>
-                    <button class="tag" style="background-color: #65c2eb">3D Model</button>
+                    <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
                     <button class="tag" style="background-color: #c8e2b8">UI Design</button><br>
                     <br><p>In Progress!!!</p>
                     <br>
@@ -139,7 +141,7 @@
                     <br>
                     <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                         <li>Create fictional language</li>
-                        <li>Draw model texture</li>
+                        <li>Draw and design model texture</li>
                     </ul>
                 </div>
             </div>
@@ -286,10 +288,10 @@
             </div>
             <ul class="artboard">
                 <li>
-                    <div class="artimage" onclick="openPopup('img_folder/2Dart/planet_pop_traveler.jpg')">
-                        <img src="img_folder/2Dart/planet_pop_traveler.jpg" alt="planet_pop_traveler" class="art">
+                    <div class="artimage" onclick="openPopup('img_folder/project_img/citywitch/remi.jpg')">
+                        <img src="img_folder/project_img/citywitch/remi.jpg" alt="remi" class="art">
                         <div class="overlayforart">
-                            <p>Album Art</p>
+                            <p>City Witch Character - Remi</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -300,10 +302,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage" onclick="openPopup('img_folder/2Dart/donki_tutu.jpg')">
-                        <img src="img_folder/2Dart/donki_tutu.jpg" alt="donki_tutu" class="art">
+                    <div class="artimage" onclick="openPopup('img_folder/project_img/citywitch/erin.jpg')">
+                        <img src="img_folder/project_img/citywitch/erin.jpg" alt="erin" class="art">
                         <div class="overlayforart">
-                            <p>Stuffy Fluffy & Don Quijote collaboration Art</p>
+                            <p>City Witch Character - Erin</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -314,10 +316,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage" onclick="openPopup('img_folder/2Dart/Toronto_Poster.jpg')">
-                        <img src="img_folder/2Dart/Toronto_Poster.jpg" alt="Toronto_Poster" class="art">
+                    <div class="artimage" onclick="openPopup('img_folder/project_img/citywitch/sasha.jpg')">
+                        <img src="img_folder/project_img/citywitch/sasha.jpg" alt="sasha" class="art">
                         <div class="overlayforart">
-                            <p>Stuffy Fluffy Radio Show Ep.350 World Tour Poster - Toronto</p>
+                            <p>City Witch Character - Sasha</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -328,10 +330,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage" onclick="openPopup('img_folder/2Dart/Taipei_Poster.jpg')">
-                        <img src="img_folder/2Dart/Taipei_Poster.jpg" alt="Taipei_Poster" class="art">
+                    <div class="artimage" onclick="openPopup('img_folder/project_img/citywitch/monster.jpg')">
+                        <img src="img_folder/project_img/citywitch/monster.jpg" alt="monsters" class="art">
                         <div class="overlayforart">
-                            <p>Stuffy Fluffy Radio Show Ep.350 World Tour Poster - Taipei</p>
+                            <p>City Witch Character - Monsters</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -342,10 +344,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage"onclick="openPopup('img_folder/2Dart/London_Poster.jpg')">
-                        <img src="img_folder/2Dart/London_Poster.jpg" alt="London_Poster" class="art">
+                    <div class="artimage"onclick="openPopup('img_folder/project_img/citywitch/endscene1.jpg')">
+                        <img src="img_folder/project_img/citywitch/endscene1.jpg" alt="endscene1" class="art">
                         <div class="overlayforart">
-                            <p>Stuffy Fluffy Radio Show Ep.350 World Tour Poster - London</p>
+                            <p>City Witch - Level One End Scene</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -356,10 +358,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage" onclick="openPopup('img_folder/2Dart/little_dream_cover.jpg')">
-                        <img src="img_folder/2Dart/little_dream_cover.jpg" alt="little dream" class="art">
+                    <div class="artimage" onclick="openPopup('img_folder/project_img/citywitch/endscene2.jpg')">
+                        <img src="img_folder/project_img/citywitch/endscene2.jpg" alt="endscene2" class="art">
                         <div class="overlayforart">
-                            <p>CTIN488 indevidual game project - The Litte Dream to the Moon (cover)</p>
+                            <p>City Witch - Level Two End Scene</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -370,10 +372,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage" onclick="openPopup('img_folder/2Dart/kin-on.jpg')">
-                        <img src="img_folder/2Dart/kin-on.jpg" alt="kin-on" class="art">
+                    <div class="artimage" onclick="openPopup('img_folder/project_img/citywitch/endscene3.jpg')">
+                        <img src="img_folder/project_img/citywitch/endscene3.jpg" alt="endscene3" class="art">
                         <div class="overlayforart">
-                            <p>「初音ミク-TAP WONDER-」summer 2020 elected game art</p>
+                            <p>City Witch - Level Three End Scene</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -384,10 +386,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage"onclick="openPopup('img_folder/2Dart/landary.jpg')">
-                        <img src="img_folder/2Dart/landary.jpg" alt="landary" class="art">
+                    <div class="artimage"onclick="openPopup('img_folder/project_img/citywitch/finalscene.jpg')">
+                        <img src="img_folder/project_img/citywitch/finalscene.jpg" alt="finalscene" class="art">
                         <div class="overlayforart">
-                            <p>Album Art</p>
+                            <p>City Witch - Ending Scene</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
@@ -398,10 +400,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="artimage" onclick="openPopup('img_folder/2Dart/portait.jpg')">
-                        <img src="img_folder/2Dart/portait.jpg" alt="portait" class="art">
+                    <div class="artimage" onclick="openPopup('img_folder/project_img/citywitch/coverbg.jpg')">
+                        <img src="img_folder/project_img/citywitch/coverbg.jpg" alt="coverbg" class="art">
                         <div class="overlayforart">
-                            <p>Anime Art</p>
+                            <p>City Witch - Cover Background</p>
                         </div>
                     </div>
                     <!-- The overlay and pop-up container -->
