--- a/arts.html
+++ b/arts.html
@@ -29,11 +29,29 @@
                         <img src="img_folder/project_img/citywitch/erin.jpg" alt="erin" class="art" onclick="openPopup('img_folder/project_img/citywitch/erin.jpg')">
                         <img src="img_folder/project_img/citywitch/sasha.jpg" alt="sasha" class="art" onclick="openPopup('img_folder/project_img/citywitch/sasha.jpg')">
                         <img src="img_folder/project_img/citywitch/monster.jpg" alt="monsters" class="art" onclick="openPopup('img_folder/project_img/citywitch/monster.jpg')">
-                        <img src="img_folder/project_img/citywitch/coverbg.jpg" alt="remi" class="art" onclick="openPopup('img_folder/project_img/citywitch/coverbg.jpg')">
+                        <img src="img_folder/project_img/citywitch/coverbg.jpg" alt="coverbg" class="art" onclick="openPopup('img_folder/project_img/citywitch/coverbg.jpg')">
                         <img src="img_folder/project_img/citywitch/endscene1.jpg" alt="end1" class="art" onclick="openPopup('img_folder/project_img/citywitch/endscene1.jpg')">
                         <img src="img_folder/project_img/citywitch/endscene2.jpg" alt="end2" class="art" onclick="openPopup('img_folder/project_img/citywitch/endscene2.jpg')">
                         <img src="img_folder/project_img/citywitch/endscene3.jpg" alt="end3" class="art" onclick="openPopup('img_folder/project_img/citywitch/endscene3.jpg')">
                         <img src="img_folder/project_img/citywitch/finalscene.jpg" alt="fin" class="art" onclick="openPopup('img_folder/project_img/citywitch/finalscene.jpg')">
+                    </div>
+                    <br>
+                    <br>
+                    <div style="display: flex;">
+                        <div class="bar" style="background-color: #a6e4f9; width: 10px;"></div>
+                        <h2 style="font-size: 20px; font-weight: normal;">Little Dream</h2>
+                    </div>
+                    <div class="artlist">
+                        <img src="img_folder/project_img/littledream/New_Cover.jpg" alt="cover" class="art" onclick="openPopup('img_folder/project_img/littledream/New_Cover.jpg')">
+                        <img src="img_folder/project_img/littledream/rules.jpg" alt="rules" class="art" onclick="openPopup('img_folder/project_img/littledream/rules.jpg')">
+                        <img src="img_folder/project_img/littledream/rocket.jpg" alt="rocket" class="art" onclick="openPopup('img_folder/project_img/littledream/rocket.jpg')">
+                        <img src="img_folder/project_img/littledream/characterback.jpg" alt="ccardb" class="art" onclick="openPopup('img_folder/project_img/littledream/characterback.jpg')">
+                        <img src="img_folder/project_img/littledream/charactercard.jpg" alt="ccard" class="art" onclick="openPopup('img_folder/project_img/littledream/charactercard.jpg')">
+                        <img src="img_folder/project_img/littledream/functioncard.jpg" alt="fcard" class="art" onclick="openPopup('img_folder/project_img/littledream/functioncard.jpg')">
+                        <img src="img_folder/project_img/littledream/Gainmaterial.jpg" alt="gcard" class="art" onclick="openPopup('img_folder/project_img/littledream/Gainmaterial.jpg')">
+                        <img src="img_folder/project_img/littledream/Unfreecard.jpg" alt="ucard" class="art" onclick="openPopup('img_folder/project_img/littledream/Unfreecard.jpg')">
+                        <img src="img_folder/project_img/littledream/Breakingcard.jpg" alt="bcard" class="art" onclick="openPopup('img_folder/project_img/littledream/Breakingcard.jpg')">
+                        <img src="img_folder/project_img/littledream/Reportcard.jpg" alt="rcard" class="art" onclick="openPopup('img_folder/project_img/littledream/Reportcard.jpg')">
                     </div>
                     <br>
                     <br>
