--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,41 @@
                     </div>
                     <div class="gamepro">
                         <div class="projectimg">
+                            <img src="img_folder/project_img/little_dream_cover.jpg" alt="little dream" class="projectpic">
+                        </div>
+                        <div class="text-container">
+                            <span style="font-weight: 300; font-size: 30px;">Little Dream 2022</span><br>
+                            <hr>
+                            <button class="tag" style="background-color: #0b5d85">Lead Artist</button>
+                            <button class="tag" style="background-color: #0889c9">2D Art</button>
+                            <button class="tag" style="background-color: #94bcd2">Creator</button>
+                            <button class="tag" style="background-color: #5b9abc">Narrative</button><br>
+                            <p>"Little Dream," initially a solo endeavor, transformed into a 
+                                poignant board game encapsulating childhood ambition, helplessness
+                                , and nostalgia. The first version mirrored my personal vision, 
+                                portraying school kids striving to build a rocket and reach the moon 
+                                amid life's challenges. Version two, a collaborative effort, refined 
+                                the original with character cards, enhancing the narrative and player 
+                                engagement. This joint creation beautifully balances individual 
+                                creativity and collective imagination, serving as a reminder of childhood dreams 
+                            </p>
+                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                <li>Board game</li>
+                                <li>solo/4-person(2.0ver) project</li>
+                                <li>Design and draw art assets</li>
+                                <li>Gameplay design</li>
+                                <li>Conceptualize narrative and settings</li>
+                            </ul><br>
+                            <div style="display: flex;">
+                                <div class="bar" style="background-color: #69cdff; width: 15px"></div>
+                                <a href="img_folder/project_img/littledream/The Little Dream to the Moon Photo Journal wk9 copy.pdf" target="_blank" rel="noopener noreferrer">
+                                    <button class="nav projectbutton" style="color: #69cdff; font-size: 18px;">Journal</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gamepro">
+                        <div class="projectimg">
                             <img src="placeholder.jpg" alt="Pig & Chicken" class="projectpic">
                               <div class="overlayforproject">
                                   <p></p>
